--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="desktop">
         <a href="#">On campus</a>
         <a href="#">Online</a>
-        <a href="#">or companies</a>
+        <a href="#">Our companies</a>
         <a href="#">Sign In</a>
       </nav>
       <nav class="mobile">
@@ -202,7 +202,7 @@
 
   <footer>
     <div class="container">
-      <p>&#169; 2016 Colmar Academy. All rights reserved</p>
+      <p>&#169; 2018 Colmar Academy. All rights reserved</p>
       <nav class="footer-nav">
         <a href="#">Terms</a>
         <a href="#">Privacy</a>
