--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
   <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
-  <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -24,10 +23,10 @@
         <a href="#">Sign In</a>
       </nav>
       <nav class="mobile">
-        <img class="mobil-icon" src="./resources/images/ic-logo.svg" alt="Colmar Academy"/>
-        <img class="mobil-icon" src="./resources/images/ic-on-campus.svg" alt="on campus"/>
-        <img class="mobil-icon" src="./resources/images/ic-online.svg" alt="online"/>
-        <img class="mobil-icon" src="./resources/images/ic-login.svg" alt="sign in"/>
+        <img class="mobil-icon" src="./resources/images/logo.svg" alt="Colmar Academy"/>
+        <img class="mobil-icon" src="./resources/images/campus.svg" alt="on campus"/>
+        <img class="mobil-icon" src="./resources/images/online.svg" alt="online"/>
+        <img class="mobil-icon" src="./resources/images/login.svg" alt="sign in"/>
       </nav>
     </div>
   </header>
