--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <nav class="desktop">
         <a href="#">On campus</a>
         <a href="#">Online</a>
-        <a href="#">Our companies</a>
+        <a href="#">On Campus</a>
         <a href="#">Sign In</a>
       </nav>
       <nav class="mobile">
         <img class="mobil-icon" src="./resources/images/logo.svg" alt="Colmar Academy"/>
-        <img class="mobil-icon" src="./resources/images/campus.svg" alt="on campus"/>
-        <img class="mobil-icon" src="./resources/images/online.svg" alt="online"/>
-        <img class="mobil-icon" src="./resources/images/login.svg" alt="sign in"/>
+        <img class="mobil-icon" src="./resources/images/campus.svg" alt="On campus"/>
+        <img class="mobil-icon" src="./resources/images/online.svg" alt="Online"/>
+        <img class="mobil-icon" src="./resources/images/login.svg" alt="Sign in"/>
       </nav>
     </div>
   </header>
