--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="picture of lecturer"/>
         <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="picture of lecturer"/>
         <div class="content">
-          <h6>Our gest lecture</h6>
+          <h6>Our guest lecture</h6>
           <p>Join a keynote with Oliver Sack about music about medical treatment</p>
           <a href="link">Read more</a>
         </div>
